--- a/UpSpace/UpSpace/Controller/LaunchesViewController/LaunchesTabmanViewController.storyboard
+++ b/UpSpace/UpSpace/Controller/LaunchesViewController/LaunchesTabmanViewController.storyboard
@@ -20,10 +20,11 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="slq-pU-kBz"/>
                     </view>
+                    <navigationItem key="navigationItem" id="bwP-dT-CGc"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8BN-FL-whT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-196" y="115"/>
+            <point key="canvasLocation" x="713.04347826086962" y="114.50892857142857"/>
         </scene>
     </scenes>
 </document>
