--- a/UpSpace/UpSpace/Base.lproj/Main.storyboard
+++ b/UpSpace/UpSpace/Base.lproj/Main.storyboard
@@ -111,6 +111,9 @@
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.23581716420000001" green="0.27791193130000003" blue="0.30980867150000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
@@ -127,13 +130,14 @@
         <!--Next-->
         <scene sceneID="f8V-W3-mAg">
             <objects>
-                <viewController id="yJh-LX-cWs" sceneMemberID="viewController">
+                <viewController id="yJh-LX-cWs" customClass="TodayContainerViewController" customModule="UpSpace" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="I1c-Nh-3Uw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="502"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TbO-kX-gzd">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="502"/>
+                                <color key="backgroundColor" red="0.18469226359999999" green="0.2073249221" blue="0.23922008280000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -146,6 +150,9 @@
                         <viewLayoutGuide key="safeArea" id="QdN-cQ-sm0"/>
                     </view>
                     <navigationItem key="navigationItem" title="Next" id="lta-Qp-55C"/>
+                    <connections>
+                        <outlet property="containerView" destination="TbO-kX-gzd" id="Pd0-xE-MSs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MgQ-s7-a9Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
