--- a/UpSpace/UpSpace/Base.lproj/Main.storyboard
+++ b/UpSpace/UpSpace/Base.lproj/Main.storyboard
@@ -107,7 +107,7 @@
                         <color key="badgeColor" red="0.9881460071" green="0.9805052876" blue="0.97254914049999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" shadowImage="clear" backIndicatorImage="clear" largeTitles="YES" id="Dnp-QA-RVI">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" shadowImage="clear" backIndicatorImage="clear" largeTitles="YES" backIndicatorTransitionMaskImage="clear" id="Dnp-QA-RVI">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.23581716420000001" green="0.27791193130000003" blue="0.30980867150000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
